# simplegnn_version2

./: GNN_explained.ipynb  README.md  setup.cfg
check_basis/: check_basis_cutoff.ipynb  painn.py  util.py
painn_test/Na2O-SiO2/with_press/: analysis.ipynb  deploy.ipynb
painn_test/calculator_test/: test_calculator.ipynb
schnet_test/: train_schnet_small.py
schnet_test/pressure_test/: test.ipynb
schnet_test/pressure_test/calculator_test/: test_calculator.ipynb
schnet_test/training_with_stress/medium/: data_convert.py  train_schnet_small.py
simplegnn/: analysis.py  painn.py  painn_calculator.py  preprocess.py  schnet.py  schnet_calculator.py  util.py
