[metadata]
name = simplegnn
version = 0.1.0                     
author = Emi Minamitani                  
author_email = eminamitani@sanken.osaka-u.ac.jp
description = A simple machine learning potential based on GNN
long_description = file: README.md  
long_description_content_type = text/markdown  
url = https://github.com/your_repo  
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:                    
python_requires = >=3.10             
install_requires =                  
    numpy
    torch
    torch-geometric
